[metadata]
name = sqliterc
version = 20241013
description = SQLite database resources (sqliterc)
long_description = sqliterc is a Python module part of sqlite-kb to allow reuse of SQLite database resources.
long_description_content_type = text/plain
url = https://github.com/libyal/sqlite-kb
maintainer = Joachim Metz
maintainer_email = joachim.metz@gmail.com
license = Apache License, Version 2.0
license_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
  README
classifiers =
  Development Status :: 2 - Pre-Alpha
  Programming Language :: Python

[options]
install_requires = file:requirements.txt
package_dir =
  sqliterc = sqliterc
packages = find:
python_requires = >=3.8
scripts =
  scripts/extract.py

[options.package_data]
sqliterc =
  data/*.yaml

[options.packages.find]
exclude =
  docs
  tests
  tests.*
  utils
where = .

[bdist_wheel]
universal = 1
